Add command and service

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
   "require": {
     "php": ">=5.5.9",
     "laravel/framework": ">=5.0.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "EasyGenerator\\": "src/"
+    }
   }
 }
